# sample-openmp

./: CMakeLists.txt  README.md
src/: main.cpp
